--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "dev": "storybook dev -p 6006",
-    "build": "storybook build"
+    "build": "storybook build",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
     "@types/node": "^22.14.1",
@@ -34,6 +35,7 @@
     "@storybook/experimental-addon-test": "^8.6.12",
     "@storybook/react": "^8.6.12",
     "@storybook/react-vite": "^8.6.12",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/test": "^8.6.12",
     "@storybook/theming": "^8.6.12",
     "@types/react": "^19.0.10",
