--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   ],
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build --filter=@aim-ignite-ui/docs && changeset publish"
   },
   "devDependencies": {
     "@mdx-js/react": "^3.1.0",
     "@storybook/addon-docs": "^8.6.12",
     "turbo": "^2.5.1"
   },
-  "packageManager": "npm@10.9.2"
- 
+  "packageManager": "npm@10.9.2",
+  "dependencies": {
+    "@changesets/cli": "^2.29.2"
+  }
 }
