--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "turbo run build",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build --filter=!docs && changeset publish"
+    "release": "turbo run build --filter=@aim-ignite-ui/docs && changeset publish"
   },
   "devDependencies": {
     "@mdx-js/react": "^3.1.0",
